AUI-2048 Fixes the form-builder-field-list-add-container overlap on IE7.

--- a/src/aui-form-builder/assets/aui-form-builder-field-list-core.css
+++ b/src/aui-form-builder/assets/aui-form-builder-field-list-core.css
@@ -60,7 +60,7 @@
 }
 
 .form-builder-field-list-empty .form-builder-field-list-add-container {
-    position: initial;
+    position: static;
 }
 
 .form-builder-field + .form-builder-field-list-add-container {
